# llamaindex-bottoms-up-development

./: .gitignore  pyproject.toml  pyproject.toml.bak
1_llms/: 1_llms.ipynb
2_documents_nodes/: 2_documents_nodes.ipynb
3_eval_baseline/: 3_eval_basline.ipynb  faithfulness_evaluator.py  simple_web_page_extractor.py
4_embeddings/: 4_embeddings.ipynb
5_retrieval/: 5_retrieval.ipynb
llama_docs_bot/: app.py  indexing.py
